# linear-regression

./: README.md  linear_regression.ipynb  pyproject.toml
